LMS-demo/force-app/main/default/objects/Trainer__c/fields/Trainer_Course__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Course__c</fullName>
    <label>Trainer Course</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>