LMS-demo/force-app/main/default/objects/Trainer__c/fields/Trainer_DOJ__c.field-meta.xml
<CustomField>
    <fullName>Trainer_DOJ__c</fullName>
    <label>Trainer DOJ</label>
    <required>true</required>
    <type>Date</type>
</CustomField>