LMS-demo/force-app/main/default/objects/Trainer__c/fields/Trainer_Email__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Email__c</fullName>
    <label>Trainer Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>