LMS-demo/force-app/main/default/objects/Trainer__c/fields/Trainer_Fees__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Fees__c</fullName>
    <label>Trainer Fees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>